# compare-wuwa

./: .gitignore  AGENTS.md  Cargo.toml  README.md  RELEASE_GUIDE.md
docs/: adr-001-no-pak-parser.md  codex-wwmi-anchor-pivot.md  phase1-fa-adapter.md  phase2a-pak-extractor.md  phase2c-fa-audit.md  phase3a-wwmi-anchor-discovery.md
src/: error.rs  lib.rs  main.rs  scan.rs
src/cli/: mod.rs
src/compare/: mod.rs
src/config/: mod.rs
src/domain/: mod.rs
src/export/: mod.rs
src/fingerprint/: mod.rs
src/gui_app/: mod.rs
src/human_summary/: mod.rs
src/inference/: mod.rs
src/ingest/: frame_analysis.rs  mod.rs  pak_extractor.rs
src/matcher/: mod.rs
src/output_policy/: mod.rs
src/pipeline/: mod.rs
src/proposal/: mod.rs
src/repo/: mod.rs
src/report/: mod.rs
src/report_storage/: mod.rs
src/snapshot/: mod.rs
src/snapshot_report/: mod.rs
src/validator/: mod.rs
src/wwmi/: anchors.rs  dependency.rs  mod.rs
tests/: compare_mode.rs  frame_analysis_archive_dump.rs  frame_analysis_compare.rs  frame_analysis_identity.rs  frame_analysis_ingest.rs  frame_analysis_wwmi_anchors.rs  gui_dual_scan_mode.rs  inference_mode.rs  local_mode.rs  mod_dependency_mode.rs  pak_extractor.rs  pipeline_mvp.rs  prepared_mesh_buffer_flow.rs  proposal_mode.rs  regression_fixture_flow.rs  rich_baseline_preference.rs  snapshot_mode.rs  snapshot_report_mode.rs  version_pair_orchestration.rs  wwmi_anchor_mode.rs  wwmi_knowledge_mode.rs  wwmi_mod_dependency_samples.rs
tests/fixtures/real_frame_analysis/: README.md  log.txt
tests/fixtures/sample_frame_analysis/: README.md  (+1 more)
(+4 files in other folders)
