[package]
name = "whashreonator"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt"] }
slint = { version = "1.8.0", default-features = true, features = ["std", "compat-1-2"] }
winapi = { version = "0.3.9", features = ["winuser", "windef"] }
